# mouse-speed-analyser

./: Cargo.toml  LICENSE  README.md
src/: main.rs
